// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@lingui/babel-plugin-extract-messages > CallExpression i18n._() > should extract messages from i18n._ call expressions 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "Message",
    "message": undefined,
    "origin": [
      "js-call-expression.js",
      1,
    ],
    "placeholders": {},
  },
  {
    "comment": "description",
    "context": undefined,
    "id": "Description",
    "message": undefined,
    "origin": [
      "js-call-expression.js",
      3,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "ID",
    "message": "Message with id",
    "origin": [
      "js-call-expression.js",
      5,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Values {param}",
    "message": undefined,
    "origin": [
      "js-call-expression.js",
      7,
    ],
    "placeholders": {
      "param": "param",
    },
  },
  {
    "comment": undefined,
    "context": "Context1",
    "id": "Some id",
    "message": undefined,
    "origin": [
      "js-call-expression.js",
      9,
    ],
    "placeholders": {},
  },
  {
    "comment": "My comment",
    "context": undefined,
    "id": "my.id",
    "message": "My Id Message",
    "origin": [
      "js-call-expression.js",
      12,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Aliased Message",
    "message": undefined,
    "origin": [
      "js-call-expression.js",
      19,
    ],
    "placeholders": {},
  },
  {
    "comment": "My comment",
    "context": undefined,
    "id": "my.id",
    "message": "My Id Message",
    "origin": [
      "js-call-expression.js",
      22,
    ],
    "placeholders": {},
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages > MessageDescriptor > should extract messages from MessageDescriptors 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "Message",
    "message": undefined,
    "origin": [
      "js-message-descriptor.js",
      1,
    ],
    "placeholders": {},
  },
  {
    "comment": "description",
    "context": undefined,
    "id": "Description",
    "message": undefined,
    "origin": [
      "js-message-descriptor.js",
      3,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "ID",
    "message": "Message with id",
    "origin": [
      "js-message-descriptor.js",
      5,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Values {param} {0} {name} {value}",
    "message": undefined,
    "origin": [
      "js-message-descriptor.js",
      7,
    ],
    "placeholders": {
      "0": "user.getName()",
      "name": ""foo"",
      "param": "param",
      "value": "user
      ? user.name
      : null",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Values {param} {0}",
    "message": undefined,
    "origin": [
      "js-message-descriptor.js",
      23,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "Context1",
    "id": "Some id",
    "message": undefined,
    "origin": [
      "js-message-descriptor.js",
      25,
    ],
    "placeholders": {},
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages > should extract Plural messages from JSX files when there's no Trans tag (integration) 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "esnaQO",
    "message": "{count, plural, one {# book} other {# books}}",
    "origin": [
      "jsx-without-trans.js",
      2,
    ],
    "placeholders": {
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": "Some context",
    "id": "8qNz+K",
    "message": "{count, plural, one {# book} other {# books}}",
    "origin": [
      "jsx-without-trans.js",
      3,
    ],
    "placeholders": {
      "count": "count",
    },
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages > should extract all messages from JS files (macros) 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "xDAtGP",
    "message": "Message",
    "origin": [
      "js-with-macros.js",
      4,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "xDAtGP",
    "message": "Message",
    "origin": [
      "js-with-macros.js",
      6,
    ],
    "placeholders": {},
  },
  {
    "comment": "description",
    "context": undefined,
    "id": "Nu4oKW",
    "message": "Description",
    "origin": [
      "js-with-macros.js",
      8,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "ID",
    "message": "Message with id",
    "origin": [
      "js-with-macros.js",
      13,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "QCVtWw",
    "message": "Values {param}",
    "origin": [
      "js-with-macros.js",
      18,
    ],
    "placeholders": {
      "param": "param",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "ID Some",
    "message": "Message with id some",
    "origin": [
      "js-with-macros.js",
      20,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Backtick",
    "message": undefined,
    "origin": [
      "js-with-macros.js",
      25,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "Context1",
    "id": "Some ID",
    "message": undefined,
    "origin": [
      "js-with-macros.js",
      29,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "Context1",
    "id": "Some other ID",
    "message": undefined,
    "origin": [
      "js-with-macros.js",
      34,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "Context2",
    "id": "Some ID",
    "message": undefined,
    "origin": [
      "js-with-macros.js",
      39,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "Context2",
    "id": "Some ID",
    "message": undefined,
    "origin": [
      "js-with-macros.js",
      44,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "sD7MQ4",
    "message": "TplLiteral",
    "origin": [
      "js-with-macros.js",
      49,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "VO4BJY",
    "message": "[useLingui]: TplLiteral",
    "origin": [
      "js-with-macros.js",
      54,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "ZxxjOE",
    "message": "[useLingui]: Text {0, plural, offset:1 =0 {No books} =1 {1 book} other {# books}}",
    "origin": [
      "js-with-macros.js",
      57,
    ],
    "placeholders": {
      "0": "users.length",
    },
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages > should extract all messages from JSX files (macros) 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "d1Kdl3",
    "message": "Hi, my name is {name}",
    "origin": [
      "jsx-with-macros.js",
      3,
    ],
    "placeholders": {
      "name": "name",
    },
  },
  {
    "comment": undefined,
    "context": "Context1",
    "id": "YikuIL",
    "message": "Some message",
    "origin": [
      "jsx-with-macros.js",
      4,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "Context1",
    "id": "LBCs5C",
    "message": "Some other message",
    "origin": [
      "jsx-with-macros.js",
      5,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "Context2",
    "id": "ru2rzr",
    "message": "Some message",
    "origin": [
      "jsx-with-macros.js",
      6,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "MHrjPM",
    "message": "Title",
    "origin": [
      "jsx-with-macros.js",
      7,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "esnaQO",
    "message": "{count, plural, one {# book} other {# books}}",
    "origin": [
      "jsx-with-macros.js",
      9,
    ],
    "placeholders": {
      "count": "count",
    },
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages > should extract all messages from JSX files 1`] = `
[
  {
    "comment": "Description",
    "context": undefined,
    "id": "msg.hello",
    "message": undefined,
    "origin": [
      "jsx-without-macros.js",
      5,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "Context1",
    "id": "msg.context",
    "message": undefined,
    "origin": [
      "jsx-without-macros.js",
      6,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "Context1",
    "id": "msg.notcontext",
    "message": undefined,
    "origin": [
      "jsx-without-macros.js",
      7,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "Context2",
    "id": "msg.context",
    "message": undefined,
    "origin": [
      "jsx-without-macros.js",
      8,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "msg.default",
    "message": "Hello World",
    "origin": [
      "jsx-without-macros.js",
      9,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "msg.default",
    "message": "Hello World",
    "origin": [
      "jsx-without-macros.js",
      10,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Hi, my name is <0>{name}</0>",
    "message": undefined,
    "origin": [
      "jsx-without-macros.js",
      11,
    ],
    "placeholders": {
      "count": "count",
    },
  },
]
`;
